[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brahma-ai"
version = "0.1.0"
description = "Advanced Agentic AI System for autonomous task execution"
authors = ["Brahma AI Team <noreply@brahma-ai.dev>"]
readme = "README.md"
homepage = "https://github.com/rumbleveer-spec/brahma-ai"
repository = "https://github.com/rumbleveer-spec/brahma-ai"
keywords = ["ai", "agent", "automation", "langchain", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.0"
openai = "^1.0.0"
anthropic = "^0.8.0"
crewai = "^0.28.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.20.0"
requests = "^2.31.0"
aiohttp = "^3.8.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
click = "^8.0.0"
rich = "^13.0.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
brahma = "brahma_ai.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
